--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,23 @@
     "require": {
         "doctrine/common": "*",
         "doctrine/annotations": "^1.13",
-        "php": ">=7.1",
+        "php": ">=7.4",
         "guzzlehttp/guzzle": "~6.0",
         "symfony/serializer": "^5.3",
-        "symfony/property-access": "^5.3"
+        "symfony/property-access": "^5.3",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "require-dev": {
+        "phpcompatibility/php-compatibility": "*",
         "phpunit/phpunit": "^9.5"
+        
     },
+    "prefer-stable" : true,
     "config": {
         "vendor-dir": "vendor"
+    },
+    "scripts": {
+        "post-install-cmd": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility",
+        "post-update-cmd" : "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility"
     }
 }
