--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ninedigit/ekasa-cloud-clientphp",
     "type": "library",
-    "version": "0.9.14",
+    "version": "0.9.15",
     "description": "API client for eKasa Cloud API",
     "homepage": "https://bitbucket.org/9digit/ekasa-cloud-phpapiclient",
     "keywords": ["ekasa", "cloud", "api", "rest", "http", "client"],
@@ -19,7 +19,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "NineDigit\\eKasa\\Cloud\\Client\\": "tests/"
+            "NineDigit\\eKasa\\Cloud\\Client\\Tests\\": "tests/"
         }
     },
     "require": {
